23. Fix alternate listview colours when running under KDE3 (KDE_SESSION_VERSION=3)
24. Make buttons slightly thinner, matches KDE4 better.
25. Fix settnig of KDE icons when QtCurve is configured by just having
    gtk-theme-name="QtCurve" in the gtkrc file.
26. Fix painting of scrollbar slider ends when sliders are shaded, and scrollbar
    buttons are not flat.

0.62.8
------
1. Treat 'abrowser' as Firefox.
2. Disable tab-mouse over for all tabs that are of the type
   GtkNoteBook.GtkFixed.GtkWindow (this is mainly for Mozilla and OO.o widgets)
3. Fix OK/Cancel buttons for all Firefox3 dialogs.
4. Removed QTC_MODIFY_MOZILLA_USER_JS cmake option, this is now set via the
   QTC_MODIFY_MOZILLA option - as the KDE button order is affected by the
   instantApply setting.
5. Draw Mozilla's scrolled windows square - as it seems to assume they are.
6. When determinging lower etch colour, ignore GtkBox widgets when looking up
   parent tree.
7. Set menu and toolbar fonts.
8. Dont darken disabled splitter.

0.62.7
------
1. For right-to-left progressbars, make animation go right-to-left - matches KDE.
2. Detect seamonkey as a Mozilla app.
3. Try to determine if a Mozilla app is new, or not, by calling <app> --version
4. Fix OO.o scrollbars when using flat scrollbar buttons.
5. Improve Mozilla and OO.o spin widgets.
6. Fix OO.o comboboxes.
7. Shrink (by 2 pixels) size of Firefox toolbars - but only if '-DQTC_MODIFY_MOZILLA=true'
   is passed to cmake. This modifies your ~/.mozilla/firefox/???.default/chrome/userChrome.css
   file to include /usr/share/themes/QtCurve/mozilla/QtCurve.css file.
8. Fix KDE button order in FireFox 3 dialogs - but only if '-DQTC_MODIFY_MOZILLA=true'
   is passed to cmake.

0.62.6
------
1. Alter meunbar item widths slightly to make more consistent with KDE4.
2. If QTC_NEW_MOZILLA is not set, don't allow faded menuitems for thunderbird -
   these just don't work here. In thunderbird it is not possible to detect if a